[gd_scene load_steps=3 format=3 uid="uid://vv52ia4qsjtw"]

[ext_resource type="Script" path="res://Prefabs/allOutAttack.gd" id="1_6m4qf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5qdwc"]
radius = 433.018

[node name="AllOutAttack" type="Area2D" groups=["AllOutAttack"]]
collision_mask = 767
script = ExtResource("1_6m4qf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5qdwc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_path_custom_line_width = 5.31

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="link_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_link_reached"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
